artemis mission data frame

--- a/over-the-moon/OverTheMoon_달탐사.ipynb
+++ b/over-the-moon/OverTheMoon_달탐사.ipynb
@@ -3848,7 +3848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 108,
       "metadata": {
         "gather": {
           "logged": 1718683927721
@@ -3911,7 +3911,7 @@
               "2   artemis2              26520         42955"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 108,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -3925,12 +3925,13 @@
         "               }\n",
         "\n",
         "#딕셔너리를 데이터 프레임으로 저장하기\n",
-        "artemis_mission "
+        "artemis_mission = pd.DataFrame(artemis_dict)\n",
+        "artemis_mission"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 109,
       "metadata": {
         "gather": {
           "logged": 1718683928021
@@ -3938,17 +3939,23 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0.4963026819923371\n",
-            "0.002848764392685611\n",
-            "0.0014369195019157087\n"
-          ]
+          "data": {
+            "text/plain": [
+              "Crewed area : Payload    0.496303\n",
+              "Sample : Crewed area     0.002849\n",
+              "Sample : Payload         0.001437\n",
+              "dtype: float64"
+            ]
+          },
+          "execution_count": 109,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "# missions 데이터프레임에서 'Crewed area : Payload', 'Sample : Crewed area', 'Sample : payload' 의 평균값을 구한다.\n"
+        "# missions 데이터프레임에서 'Crewed area : Payload', 'Sample : Crewed area', 'Sample : payload' 의 평균값을 구한다.\n",
+        "\n",
+        "missions[['Crewed area : Payload', 'Sample : Crewed area', 'Sample : Payload']].mean()"
       ]
     },
     {
