--- a/over-the-moon/OverTheMoon_달탐사.ipynb
+++ b/over-the-moon/OverTheMoon_달탐사.ipynb
@@ -3917,10 +3917,10 @@
         }
       ],
       "source": [
-        "artemis_crewedArea = 26520\n",
+        "artemis_crewed_area = 26520\n",
         "\n",
         "artemis_dict = {'Mission' : ['artemis1', 'artemis1b', 'artemis2'],\n",
-        "                'Total weight (kg)' : [artemis_crewedArea, artemis_crewedArea, artemis_crewedArea],\n",
+        "                'Total weight (kg)' : [artemis_crewed_area, artemis_crewed_area, artemis_crewed_area],\n",
         "                'Payload (kg)' : [26988, 37965, 42955]\n",
         "               }\n",
         "\n",
@@ -3960,7 +3960,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 110,
       "metadata": {
         "gather": {
           "logged": 1718683928212
@@ -3979,16 +3979,209 @@
         {
           "data": {
             "text/plain": [
-              "375.03598999999997"
+              "np.float64(375.03598999999997)"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 110,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# missions 데이터프레임에서 'Sample weight (kg)'의 총합을 구한다.\n"
+        "# missions 데이터프레임에서 'Sample weight (kg)'의 총합을 구한다.\n",
+        "missions['Sample weight (kg)'].sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 111,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Mission name</th>\n",
+              "      <th>Sample weight (kg)</th>\n",
+              "      <th>Weight diff (kg)</th>\n",
+              "      <th>Lunar module (LM)</th>\n",
+              "      <th>LM mass (kg)</th>\n",
+              "      <th>LM mass diff (kg)</th>\n",
+              "      <th>Command module (CM)</th>\n",
+              "      <th>CM mass (kg)</th>\n",
+              "      <th>CM mass diff (kg)</th>\n",
+              "      <th>Total weight (kg)</th>\n",
+              "      <th>Total weight diff (kg)</th>\n",
+              "      <th>Crewed area : Payload</th>\n",
+              "      <th>Sample : Crewed area</th>\n",
+              "      <th>Sample : Payload</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Apollo11</td>\n",
+              "      <td>21.55424</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>Eagle (LM-5)</td>\n",
+              "      <td>15103</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>Columbia (CSM-107]</td>\n",
+              "      <td>5560</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>20663</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.475011</td>\n",
+              "      <td>0.001043</td>\n",
+              "      <td>0.000495</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Apollo12</td>\n",
+              "      <td>34.34238</td>\n",
+              "      <td>12.78814</td>\n",
+              "      <td>Intrepid (LM-6)</td>\n",
+              "      <td>15235</td>\n",
+              "      <td>132.0</td>\n",
+              "      <td>Yankee Clipper (CM-100])</td>\n",
+              "      <td>5609</td>\n",
+              "      <td>49.0</td>\n",
+              "      <td>20844</td>\n",
+              "      <td>181.0</td>\n",
+              "      <td>0.479172</td>\n",
+              "      <td>0.001648</td>\n",
+              "      <td>0.000789</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Apollo14</td>\n",
+              "      <td>41.83363</td>\n",
+              "      <td>7.49125</td>\n",
+              "      <td>Antares (LM-8)</td>\n",
+              "      <td>15264</td>\n",
+              "      <td>29.0</td>\n",
+              "      <td>Kitty Hawk (CM-110)</td>\n",
+              "      <td>5758</td>\n",
+              "      <td>149.0</td>\n",
+              "      <td>21022</td>\n",
+              "      <td>178.0</td>\n",
+              "      <td>0.483264</td>\n",
+              "      <td>0.001990</td>\n",
+              "      <td>0.000962</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Apollo15</td>\n",
+              "      <td>75.39910</td>\n",
+              "      <td>33.56547</td>\n",
+              "      <td>Falcon (LM-10)</td>\n",
+              "      <td>16430</td>\n",
+              "      <td>1166.0</td>\n",
+              "      <td>Endeavor (CM-112)</td>\n",
+              "      <td>5875</td>\n",
+              "      <td>117.0</td>\n",
+              "      <td>22305</td>\n",
+              "      <td>1283.0</td>\n",
+              "      <td>0.512759</td>\n",
+              "      <td>0.003380</td>\n",
+              "      <td>0.001733</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Apollo16</td>\n",
+              "      <td>92.46262</td>\n",
+              "      <td>17.06352</td>\n",
+              "      <td>Orion (LM-11)</td>\n",
+              "      <td>16445</td>\n",
+              "      <td>15.0</td>\n",
+              "      <td>Casper (CM-113)</td>\n",
+              "      <td>5840</td>\n",
+              "      <td>-35.0</td>\n",
+              "      <td>22285</td>\n",
+              "      <td>-20.0</td>\n",
+              "      <td>0.512299</td>\n",
+              "      <td>0.004149</td>\n",
+              "      <td>0.002126</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Apollo17</td>\n",
+              "      <td>109.44402</td>\n",
+              "      <td>16.98140</td>\n",
+              "      <td>Challenger (LM-12)</td>\n",
+              "      <td>16456</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>America (CM-114)</td>\n",
+              "      <td>5960</td>\n",
+              "      <td>120.0</td>\n",
+              "      <td>22416</td>\n",
+              "      <td>131.0</td>\n",
+              "      <td>0.515310</td>\n",
+              "      <td>0.004882</td>\n",
+              "      <td>0.002516</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  Mission name  Sample weight (kg)  Weight diff (kg)   Lunar module (LM)  \\\n",
+              "0     Apollo11            21.55424           0.00000        Eagle (LM-5)   \n",
+              "1     Apollo12            34.34238          12.78814     Intrepid (LM-6)   \n",
+              "2     Apollo14            41.83363           7.49125      Antares (LM-8)   \n",
+              "3     Apollo15            75.39910          33.56547      Falcon (LM-10)   \n",
+              "4     Apollo16            92.46262          17.06352       Orion (LM-11)   \n",
+              "5     Apollo17           109.44402          16.98140  Challenger (LM-12)   \n",
+              "\n",
+              "   LM mass (kg)  LM mass diff (kg)       Command module (CM)  CM mass (kg)  \\\n",
+              "0         15103                0.0        Columbia (CSM-107]          5560   \n",
+              "1         15235              132.0  Yankee Clipper (CM-100])          5609   \n",
+              "2         15264               29.0       Kitty Hawk (CM-110)          5758   \n",
+              "3         16430             1166.0         Endeavor (CM-112)          5875   \n",
+              "4         16445               15.0           Casper (CM-113)          5840   \n",
+              "5         16456               11.0          America (CM-114)          5960   \n",
+              "\n",
+              "   CM mass diff (kg)  Total weight (kg)  Total weight diff (kg)  \\\n",
+              "0                0.0              20663                     0.0   \n",
+              "1               49.0              20844                   181.0   \n",
+              "2              149.0              21022                   178.0   \n",
+              "3              117.0              22305                  1283.0   \n",
+              "4              -35.0              22285                   -20.0   \n",
+              "5              120.0              22416                   131.0   \n",
+              "\n",
+              "   Crewed area : Payload  Sample : Crewed area  Sample : Payload  \n",
+              "0               0.475011              0.001043          0.000495  \n",
+              "1               0.479172              0.001648          0.000789  \n",
+              "2               0.483264              0.001990          0.000962  \n",
+              "3               0.512759              0.003380          0.001733  \n",
+              "4               0.512299              0.004149          0.002126  \n",
+              "5               0.515310              0.004882          0.002516  "
+            ]
+          },
+          "execution_count": 111,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "missions"
       ]
     },
     {
