--- a/over-the-moon/OverTheMoon_달탐사.ipynb
+++ b/over-the-moon/OverTheMoon_달탐사.ipynb
@@ -6637,7 +6637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 206,
+      "execution_count": 213,
       "metadata": {
         "gather": {
           "logged": 1718683931765
@@ -6670,7 +6670,7 @@
               "Name: Type, Length: 2229, dtype: bool"
             ]
           },
-          "execution_count": 206,
+          "execution_count": 213,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -7033,7 +7033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 255,
       "metadata": {
         "gather": {
           "logged": 1718685037125
@@ -7083,18 +7083,21 @@
               "Index: []"
             ]
           },
-          "execution_count": 64,
+          "execution_count": 255,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "## 아르테미스 임무에 전달할 최종 데이터프레임 needed_samples_overview 만든다.\n"
+        "## 아르테미스 임무에 전달할 최종 데이터프레임 needed_samples_overview 만든다.\n",
+        "\n",
+        "needed_samples_overview = pd.DataFrame()\n",
+        "needed_samples_overview"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 256,
       "metadata": {
         "gather": {
           "logged": 1718685109777
@@ -7158,18 +7161,22 @@
               "2  Crustal"
             ]
           },
-          "execution_count": 66,
+          "execution_count": 256,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# needed samples 데이터프레임에서 중복되지 않은 암석유형을 추출한다.\n"
+        "# needed samples 데이터프레임에서 중복되지 않은 암석유형을 추출한다.\n",
+        "\n",
+        "needed_samples['Type'].unique()\n",
+        "needed_samples_overview['Type'] = needed_samples['Type'].unique()\n",
+        "needed_samples_overview"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 257,
       "metadata": {
         "gather": {
           "logged": 1718685228127
@@ -7195,7 +7202,7 @@
               "Name: Weight (kg), dtype: float64"
             ]
           },
-          "execution_count": 67,
+          "execution_count": 257,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -7208,7 +7215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 258,
       "metadata": {
         "gather": {
           "logged": 1718685364437
@@ -7276,19 +7283,19 @@
               "2  Crustal      4.74469"
             ]
           },
-          "execution_count": 69,
+          "execution_count": 258,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "needed_sample_weight = needed_samples.groupby('Type')['Weight (kg)'].sum().reset_index()\n",
-        "needed_sample_weight"
+        "needed_sample_weight_sum = needed_samples.groupby('Type')['Weight (kg)'].sum().reset_index()\n",
+        "needed_sample_weight_sum"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 259,
       "metadata": {
         "gather": {
           "logged": 1718685506197
@@ -7356,18 +7363,22 @@
               "2  Crustal      4.74469"
             ]
           },
-          "execution_count": 70,
+          "execution_count": 259,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# 두 데이터프레임을 병합한다.\n"
+        "# 두 데이터프레임을 병합한다.\n",
+        "\n",
+        "merged = pd.merge(needed_samples_overview, needed_sample_weight_sum, on='Type')\n",
+        "needed_samples_overview = merged\n",
+        "needed_samples_overview"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 260,
       "metadata": {
         "gather": {
           "logged": 1718685632691
@@ -7435,19 +7446,21 @@
               "2  Crustal            4.74469"
             ]
           },
-          "execution_count": 71,
+          "execution_count": 260,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# 컬럼명을 변경 'Weight (kg)' -> 'Total weight (kg)'\n",
-        "\n"
+        "\n",
+        "needed_samples_overview.rename(columns={'Weight (kg)': 'Total weight (kg)'}, inplace=True)\n",
+        "needed_samples_overview"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 261,
       "metadata": {
         "gather": {
           "logged": 1718685790983
@@ -7515,19 +7528,21 @@
               "2  Crustal     0.103145"
             ]
           },
-          "execution_count": 73,
+          "execution_count": 261,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# needed_samples 데이터프레임에서 암석유형별 중량의 평균을 구한다.\n",
-        "\n"
+        "\n",
+        "needed_samples_weight_mean = needed_samples.groupby('Type')['Weight (kg)'].mean().reset_index()\n",
+        "needed_samples_weight_mean"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 262,
       "metadata": {
         "gather": {
           "logged": 1718685883504
@@ -7599,18 +7614,22 @@
               "2  Crustal            4.74469     0.103145"
             ]
           },
-          "execution_count": 75,
+          "execution_count": 262,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# 두 데이터프레임을 병합한다.\n"
+        "# 두 데이터프레임을 병합한다.\n",
+        "\n",
+        "merged = pd.merge(needed_samples_overview, needed_samples_weight_mean, on='Type')\n",
+        "needed_samples_overview = merged\n",
+        "needed_samples_overview"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 263,
       "metadata": {
         "gather": {
           "logged": 1718685955093
@@ -7682,18 +7701,21 @@
               "2  Crustal            4.74469             0.103145"
             ]
           },
-          "execution_count": 76,
+          "execution_count": 263,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# 컬럼명을 변경 'Weight (kg)' -> 'Average weight (kg)'\n"
+        "# 컬럼명을 변경 'Weight (kg)' -> 'Average weight (kg)'\n",
+        "\n",
+        "needed_samples_overview.rename(columns={'Weight (kg)': 'Average weight (kg)'}, inplace=True)\n",
+        "needed_samples_overview"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 264,
       "metadata": {
         "gather": {
           "logged": 1718686270585
@@ -7731,34 +7753,34 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>Type</th>\n",
-              "      <th>ID</th>\n",
+              "      <th>count</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>Basalt</td>\n",
-              "      <td>351</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
               "      <td>Breccia</td>\n",
               "      <td>959</td>\n",
               "    </tr>\n",
               "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Soil</td>\n",
+              "      <td>813</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
               "      <th>2</th>\n",
+              "      <td>Basalt</td>\n",
+              "      <td>351</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
               "      <td>Core</td>\n",
               "      <td>56</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
+              "      <th>4</th>\n",
               "      <td>Crustal</td>\n",
               "      <td>46</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>Soil</td>\n",
-              "      <td>813</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
@@ -7770,27 +7792,30 @@
               "</div>"
             ],
             "text/plain": [
-              "      Type   ID\n",
-              "0   Basalt  351\n",
-              "1  Breccia  959\n",
-              "2     Core   56\n",
-              "3  Crustal   46\n",
-              "4     Soil  813\n",
-              "5  Special    4"
+              "      Type  count\n",
+              "0  Breccia    959\n",
+              "1     Soil    813\n",
+              "2   Basalt    351\n",
+              "3     Core     56\n",
+              "4  Crustal     46\n",
+              "5  Special      4"
             ]
           },
-          "execution_count": 79,
+          "execution_count": 264,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# rock_samples 데이터프레임에서 암석유형별('Type') 개수를 구해서 total_rock_count 라는 데이터프레임을 만든다.\n"
+        "# rock_samples 데이터프레임에서 암석유형별('Type') 개수를 구해서 total_rock_count 라는 데이터프레임을 만든다.\n",
+        "\n",
+        "total_rock_count = rock_samples['Type'].value_counts().reset_index()\n",
+        "total_rock_count"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 265,
       "metadata": {
         "gather": {
           "logged": 1718686309369
@@ -7830,7 +7855,7 @@
               "      <th>Type</th>\n",
               "      <th>Total weight (kg)</th>\n",
               "      <th>Average weight (kg)</th>\n",
-              "      <th>ID</th>\n",
+              "      <th>count</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -7860,24 +7885,28 @@
               "</div>"
             ],
             "text/plain": [
-              "      Type  Total weight (kg)  Average weight (kg)   ID\n",
-              "0   Basalt           17.42340             1.244529  351\n",
-              "1  Breccia           10.11850             1.264813  959\n",
-              "2  Crustal            4.74469             0.103145   46"
+              "      Type  Total weight (kg)  Average weight (kg)  count\n",
+              "0   Basalt           17.42340             1.244529    351\n",
+              "1  Breccia           10.11850             1.264813    959\n",
+              "2  Crustal            4.74469             0.103145     46"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 265,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# 두 데이터프레임을 병합한다.\n"
+        "# 두 데이터프레임을 병합한다.\n",
+        "\n",
+        "merged = pd.merge(needed_samples_overview, total_rock_count, on='Type')\n",
+        "needed_samples_overview = merged\n",
+        "needed_samples_overview"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 266,
       "metadata": {
         "gather": {
           "logged": 1718686425106
@@ -7953,7 +7982,7 @@
               "2  Crustal            4.74469             0.103145                 46"
             ]
           },
-          "execution_count": 81,
+          "execution_count": 266,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -7961,13 +7990,13 @@
       "source": [
         "# 컬럼명을 변경한다. 'ID' -> 'Number of samples'\n",
         "\n",
-        "needed_samples_overview.rename(columns={'ID' : 'Number of samples'}, inplace=True)\n",
+        "needed_samples_overview.rename(columns={'count' : 'Number of samples'}, inplace=True)\n",
         "needed_samples_overview"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 267,
       "metadata": {
         "gather": {
           "logged": 1718686527101
@@ -7986,21 +8015,24 @@
         {
           "data": {
             "text/plain": [
-              "1356"
+              "np.int64(1356)"
             ]
           },
-          "execution_count": 82,
+          "execution_count": 267,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# needed_samples_overview['Number of samples'] 의 총합을 구하고 total_rocks에 할당\n"
+        "# needed_samples_overview['Number of samples'] 의 총합을 구하고 total_rocks에 할당\n",
+        "\n",
+        "total_rocks = needed_samples_overview['Number of samples'].sum()\n",
+        "total_rocks"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 269,
       "metadata": {
         "gather": {
           "logged": 1718686635216
@@ -8085,18 +8117,20 @@
               "2             0.033923  "
             ]
           },
-          "execution_count": 83,
+          "execution_count": 269,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# 각 암석유형별로 차지하는 비율을 구해서 'Percentage of rocks'라는 컬럼에 할당한다.\n"
+        "# 각 암석유형별로 차지하는 비율을 구해서 'Percentage of rocks'라는 컬럼에 할당한다.\n",
+        "needed_samples_overview['Percentage of rocks'] = needed_samples_overview['Number of samples'] / total_rocks\n",
+        "needed_samples_overview"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 270,
       "metadata": {
         "gather": {
           "logged": 1718686674903
@@ -8185,7 +8219,7 @@
               "2                        61.722877                     68.636054  "
             ]
           },
-          "execution_count": 84,
+          "execution_count": 270,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -8196,7 +8230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 272,
       "metadata": {
         "gather": {
           "logged": 1718686817437
@@ -8215,21 +8249,24 @@
         {
           "data": {
             "text/plain": [
-              "63.61713411579792"
+              "np.float64(63.61713411579792)"
             ]
           },
-          "execution_count": 85,
+          "execution_count": 272,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# artemis_mission['Estimated sample weight (kg)']의 평균을 구해서 Artemis 달탐사의 에상 암석 중량을 구한다.\n"
+        "# artemis_mission['Estimated sample weight (kg)']의 평균을 구해서 Artemis 달탐사의 에상 암석 중량을 구한다.\n",
+        "\n",
+        "estimated_sample_weight_mean = artemis_mission['Estimated sample weight (kg)'].mean()\n",
+        "estimated_sample_weight_mean"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 274,
       "metadata": {
         "gather": {
           "logged": 1718686970547
@@ -8318,18 +8355,21 @@
               "2             0.033923           2.158103  "
             ]
           },
-          "execution_count": 86,
+          "execution_count": 274,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# needed_samples_overview['Weight to collect'] 컬럼을 만든다.\n"
+        "# needed_samples_overview['Weight to collect'] 컬럼을 만든다.\n",
+        "\n",
+        "needed_samples_overview['Weight to collect'] = needed_samples_overview['Percentage of rocks'] * estimated_sample_weight_mean\n",
+        "needed_samples_overview"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 275,
       "metadata": {
         "gather": {
           "logged": 1718687100407
@@ -8422,15 +8462,50 @@
               "2             0.033923           2.158103         20.922917  "
             ]
           },
-          "execution_count": 87,
+          "execution_count": 275,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# 수집할 각각의 암석 개수를 알려준다.\n",
-        "\n"
+        "\n",
+        "needed_samples_overview['Rocks to collect'] = needed_samples_overview['Weight to collect'] / needed_samples_overview['Average weight (kg)']\n",
+        "needed_samples_overview"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 280,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "==================================================\n",
+            "Basalt -> 13.2317 samples, 16.4673 kg\n",
+            "Breccia -> 35.5719 samples, 44.9918 kg\n",
+            "Crustal -> 20.9229 samples, 2.1581 kg\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('='*50)\n",
+        "print('Mission Overview')\n",
+        "print('='*50)\n",
+        "\n",
+        "for type_, count, weight in needed_samples_overview[['Type', 'Rocks to collect', 'Weight to collect']].values:\n",
+        "    print(f'{type_} -> {count:.4f} samples, {weight:.4f} kg')\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
