출력 형식 약간 수정

--- a/over-the-moon/OverTheMoon_달탐사.ipynb
+++ b/over-the-moon/OverTheMoon_달탐사.ipynb
@@ -8476,28 +8476,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 280,
+      "execution_count": 296,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "==================================================\n",
-            "Basalt -> 13.2317 samples, 16.4673 kg\n",
-            "Breccia -> 35.5719 samples, 44.9918 kg\n",
-            "Crustal -> 20.9229 samples, 2.1581 kg\n"
+            "============================================================\n",
+            "Mission Overview\n",
+            "작성자: 이현령\n",
+            "------------------------------------------------------------\n",
+            "  0: Breccia    ->    35.5719 samples,    44.9918 kg\n",
+            "  1: Basalt     ->    13.2317 samples,    16.4673 kg\n",
+            "  2: Crustal    ->    20.9229 samples,     2.1581 kg\n",
+            "============================================================\n"
           ]
         }
       ],
       "source": [
-        "print('='*50)\n",
+        "print('='*60)\n",
         "print('Mission Overview')\n",
-        "print('='*50)\n",
+        "print('작성자: 이현령')\n",
+        "print('-'*60)\n",
         "\n",
-        "for type_, count, weight in needed_samples_overview[['Type', 'Rocks to collect', 'Weight to collect']].values:\n",
-        "    print(f'{type_} -> {count:.4f} samples, {weight:.4f} kg')\n",
-        "    "
+        "sorted_overview = needed_samples_overview.sort_values('Weight to collect', ascending=False)\n",
+        "\n",
+        "\n",
+        "for i, (type_, count, weight) in enumerate(sorted_overview[['Type', 'Rocks to collect', 'Weight to collect']].values):\n",
+        "    print(f'{i:3}: {type_:10} -> {count:10.4f} samples, {weight:10.4f} kg')\n",
+        "\n",
+        "print('='*60)"
       ]
     },
     {
